--- a/.github/workflows/Windows 10 - RustDesk.yml
+++ b/.github/workflows/Windows 10 - RustDesk.yml
@@ -7,8 +7,8 @@ jobs:
   build:
     name: Start Building...
     runs-on: windows-latest
+    timeout-minutes: 240 # Set the timeout to 2 hours
 
-    
     steps:
       - name: Downloading & Installing Essentials
         run: |
